--- a/.gitignore
+++ b/.gitignore
@@ -7,6 +7,7 @@ public_html/files/*
 !public_html/files/.gitkeep
 public_html/temp/*
 !public_html/temp/.gitkeep
+config.json
 log/*.log
 .DS_Store
 *._
